fix boom bus and extra contrast in table

--- a/src/index.html
+++ b/src/index.html
@@ -139,19 +139,13 @@
         </div>
     </div>
 
-    <table id="unitTable" class="highlight responsive-table">
+    <table id="unitTable" class="highlight striped responsive-table">
         <thead>
         <tr>
             <th>Unit Name</th>
             <th>Rank</th>
             <th>SP</th>
             <th>Promotion Reward</th>
-            <th>Unit Type</th>
-            <th>Unlock Level</th>
-            <th>Building Requirement</th>
-            <th>Other Requirements</th>
-            <th>Category</th>
-            <th>Requires Nanopods</th>
             <th>
                 Owned<br/>
                 <label for="selectAllOwned"></label><input type="checkbox" id="selectAllOwned"/>
@@ -160,6 +154,12 @@
                 Completed<br/>
                 <label for="selectAllCompleted"></label><input type="checkbox" id="selectAllCompleted"/>
             </th>
+            <th>Unlock Level</th>
+            <th>Category</th>
+            <th>Unit Type</th>
+            <th>Building Requirement</th>
+            <th>Other Requirements</th>
+            <th>Requires Nanopods</th>
         </tr>
 
         </thead>
