--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
             <th>Unit Name</th>
             <th>Rank</th>
             <th>SP</th>
-            <th>Promotion Reward</th>
+            <th>Promotion XP Reward</th>
             <th>
                 Owned<br/>
                 <label for="selectAllOwned"></label><input type="checkbox" id="selectAllOwned"/>
