--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,7 @@
         </thead>
         <tbody></tbody>
     </table>
+    <img src="https://visitor-badge.laobi.icu/badge?page_id=feddevanderlist.battlenations-unit-tracker" alt="Visitor Badge">
 </div>
 
 <!-- Scripts -->
