--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
             </thead>
             <tbody></tbody>
         </table>
-        <img src="https://visitor-badge.laobi.icu/badge?page_id=feddevanderlist.battlenations-unit-tracker"
+        <img src="https://visitor-badge.laobi.icu/badge?page_id=tmpvalue"
              alt="Visitor Badge">
     </div>
 
@@ -207,6 +207,11 @@
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/nouislider@15.8.1/dist/nouislider.min.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/counters.js"></script>
+    <script src="js/tracking.js"></script>
+    <script src="js/import-export.js"></script>
+    <script src="js/table-init.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
